--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -419,7 +419,7 @@
         <div class="achievements-text">
             <h2 class="achievements-title"><u>Achievements</u></h2>
             <p class="achievements-description">
-                Our Commitment to Quality and Continuous improvement have been the key factors for Techno Win’s Survival and Growth in the last 20 Years. While we are certified with the ISO 9001:2015 and ISO 27001:2013 which ensures that our final products or services meet customer requirements and conforms to specific standards, we are also certified with the CMMI Maturity Level 3 Certification which certifies our ability to improve processes and continuously deliver high-quality products or services. Some of our Applications have undergone VAPT and are awarded the CERT-IN certification.
+                With 20 years of growth, we are committed to delivering exceptional products and services that exceed customer expectations. Certified with ISO 9001:2015 and ISO 27001:2013, we uphold globally recognized standards in quality and information security management. Our CMMI Maturity Level 3 certification highlights our ability to optimize processes and consistently deliver high-quality, efficient solutions. Focused on continuous improvement, we ensure our clients receive secure, reliable solutions aligned with global standards. Partner with us for top-tier performance and innovation.
             </p>
         </div>
 
