--- a/static/css/software_style.css
+++ b/static/css/software_style.css
@@ -288,7 +288,7 @@ html {
 
 /* Title (h2) */
 .video-card h2 {
-  font-size: 22px;
+  font-size: 20px;
   color: rgb(8, 55, 116);
   font-weight: bold;
   margin-bottom: 10px;
@@ -355,6 +355,7 @@ html {
   background: white;
   padding: 15px;
   border-radius: 12px;
+  text-align: left;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
@@ -633,7 +634,8 @@ html {
 }
 
 .web-text-card:hover p {
-  color: rgb(0, 0, 0);
+  color: rgb(8, 55, 116);
+  text-shadow: 0 0 10px rgb(245, 4, 4);
   font-weight: bold;
 }
 
