--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends "Shared/layout.html" %} {% block content %} 
+{% extends "Shared/layout.html" %} {% block content %} {% csrf_token %}
 <html lang="en">
     <head>
         {% load static %}
@@ -305,7 +305,10 @@
         
         <!-- Contact Form -->
         <div class="contact-form-container">
-            <form action="/submit_form" method="post" class="contact-form">
+            
+            <!-- Your HTML Form -->
+            <form method="POST" action="{% url 'contactUsFormPost' %}" class="contact-form">
+                {% csrf_token %}
                 <div class="form-field">
                     <label for="name">Full Name: <span class="required">*</span></label>
                     <input type="text" id="name" name="name" placeholder="Enter your full name" required>
@@ -323,12 +326,12 @@
                     <textarea id="message" name="message" placeholder="Write your message" rows="5" required></textarea>
                 </div>
                 <div class="form-button-container">
-                    <button type="submit" class="submit-btn">
+                    <button type="submit" class="submit-btn"> 
                         <i class="fas fa-paper-plane"></i> Send Message
                     </button>
                 </div>
-                
             </form>
+
         </div>
     </section>
 
@@ -343,6 +346,11 @@
     </section>
 
 </body>
+
+    <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+    <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'sweetalert2/dist/sweetalert2.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
         // Function to animate the counter
@@ -390,6 +398,8 @@
         gtag('config', 'G-2ZJE06MHVY');
     </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
 </html>
 
 {% endblock %}
