--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -262,35 +262,39 @@
     </section> {% endcomment %}
 
     <section>
-    <div class="chatbot-footer">
-        <a href="javascript:void(0);" id="chatbotIcon" onclick="toggleChatbot()">
-            <img class="chatBot" src="{% static 'images/chatbot1.gif' %}" alt="Chatbot">
-        </a>
-        <div class="chatbot-prompt">May I help you?</div> <!-- "May I help you?" text -->
-    </div>
-
-    <div id="chatbot" class="chatbot-container">
-        <div class="chatbot-header">
-            <img src="{% static 'images/robot2.png' %}" alt="Chatbot GIF" class="chatbot-gif">
-            TechnoWin Chatbot
-            <button class="close-btn" onclick="toggleChatbot()">X</button>
-        </div>
-
-        <div id="chatMessages">
-            <div class="message bot-message">
-                <div class="bot-icon">
-                    <img src="{% static 'images/businessman.png' %}" alt="Bot Icon" />
-                </div>
-                <div class="message-text">Welcome! How can we assist you today?</div>
+        <div class="chatbot-footer">
+            <a href="javascript:void(0);" id="chatbotIcon" onclick="toggleChatbot()">
+                <img class="chatBot" src="{% static 'images/chatbot1.gif' %}" alt="Chatbot">
+            </a>
+            <!-- Added a box for "May I help you?" -->
+            <div class="chatbot-prompt-box">
+                <div class="chatbot-prompt">May I help you?</div> <!-- Text inside the box -->
             </div>
         </div>
-
-        <div class="input-container">
-            <input type="text" id="userInput" placeholder="Type your message..." onkeydown="if(event.key === 'Enter'){ sendMessage(); }">
-            <button onclick="sendMessage()">Send</button>
+    
+        <div id="chatbot" class="chatbot-container">
+            <div class="chatbot-header">
+                <img src="{% static 'images/robot2.png' %}" alt="Chatbot GIF" class="chatbot-gif">
+                TechnoWin Chatbot
+                <button class="close-btn" onclick="toggleChatbot()">X</button>
+            </div>
+    
+            <div id="chatMessages">
+                <div class="message bot-message">
+                    <div class="bot-icon">
+                        <img src="{% static 'images/businessman.png' %}" alt="Bot Icon" />
+                    </div>
+                    <div class="message-text">Welcome! How can we assist you today?</div>
+                </div>
+            </div>
+    
+            <div class="input-container">
+                <input type="text" id="userInput" placeholder="Type your message..." onkeydown="if(event.key === 'Enter'){ sendMessage(); }">
+                <button onclick="sendMessage()">Send</button>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+    
 
     
             
