--- a/static/css/share_layout.css
+++ b/static/css/share_layout.css
@@ -627,7 +627,8 @@ footer {
     /* bottom: 20px; */
     left: 20px;
     width: 400px;
-    background: rgb(8, 55, 116);
+    color: rgb(8, 55, 116);
+    background: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -908,6 +909,7 @@ footer {
     align-items: center;
     padding: 10px;
     background-color: #e0f2f1;
+    border: 3px solid rgb(20, 76, 150);
     border-radius: 0 0 10px 10px;
   }
   
@@ -915,6 +917,7 @@ footer {
     width: 80%;
     padding: 8px;
     border: none;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 15px;
     margin-right: 10px;
     font-size: 14px;
