--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -55,7 +55,7 @@
             <a href="https://x.com/technowin_?t=V2S4gtxt8nCJlhB7KRyKAA&s=09" class="social-icon twitter" target="_blank">
                 <img src="{% static 'social_media/twitter.png' %}" alt="Twitter">
             </a>
-            <a href="#" class="social-icon linkedin" target="_blank">
+            <a href="https://www.linkedin.com/in/technowin-it-infra?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon linkedin" target="_blank">
                 <img src="{% static 'social_media/linkedin.png' %}" alt="LinkedIn">
             </a>
             <a href="https://www.instagram.com/technowin_infra/profilecard/?igsh=eWdyNWllNTlxaWc4" class="social-icon instagram" target="_blank">
