--- a/static/css/about_us_style.css
+++ b/static/css/about_us_style.css
@@ -1128,10 +1128,10 @@ body {
 #social-media-section {
   position: relative;
   width: 100%;
-  height: 120vh; /* Ensure it takes full viewport height */
+  height: 100vh; /* Ensure it takes full viewport height */
   overflow: hidden;
   animation: fadeIn 1s ease-in-out; /* Smooth fade-in animation */
-  margin-top: 40px;
+  margin-top: 45px;
 }
 
 /* Video Container Styling */
@@ -1152,7 +1152,7 @@ body {
   transform: translate(-50%, -50%); /* Center vertically */
   width: 100%; /* Ensure the video spans the entire width */
   height: 100%; /* Ensure the video spans the entire height */
-  object-fit: cover; /* Ensure the video covers the container fully */
+  object-fit: cover;
   z-index: -1; /* Ensure the video stays in the background */
   pointer-events: none; /* Prevent user interaction with the video */
 }
@@ -1270,3 +1270,4 @@ body {
     font-size: 1.5rem; /* Even smaller text size for very small screens */
   }
 }
+
