--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -292,9 +292,7 @@
       </div>
     </section>
 
-
-    
-
+  
     <section id="mvo-video-background" class="mvo-background-wrapper">
       <!-- Background Video -->
       <video autoplay muted loop id="mvo-video-element">
@@ -302,6 +300,46 @@
         Your browser does not support the video tag.
       </video>
     </section>
+
+
+    <section class="blog-section" id="blog-section">
+      <h2 class="section-title">Latest Blogs</h2>
+      <div class="blog-cards">
+          <!-- Blog Card 1 -->
+          <div class="blog-card">
+              <img  src="{% static 'blog/ai_img.png' %}" alt="Blog 1">
+              <div class="blog-card-content">
+                  <h3 class="blog-title"><i>Revolutionizing the Future with AI</i></h3>
+                  <p class="blog-description">At TechnoWin IT Infra Pvt Ltd, we see Artificial Intelligence as the driving force behind the next wave of innovation. AI is revolutionizing industries, from smart assistants to autonomous systems, transforming how businesses operate. Let us help you explore the endless possibilities AI offers to elevate your business.</p>
+                  <a href="blog1.html" class="read-more">Read More</a>
+              </div>
+          </div>
+  
+          <!-- Blog Card 2 -->
+          <div class="blog-card">
+              <img src="{% static 'blog/bitcoin_img.png' %}" alt="Blog 2">
+              <div class="blog-card-content">
+                  <h3 class="blog-title"><i>Bitcoin: Revolutionized by Blockchain</i></h3>
+                  <p class="blog-description">At TechnoWin IT Infra Pvt Ltd, we believe Bitcoin, fueled by blockchain technology, is the future of finance. With its decentralized and secure system, Bitcoin is transforming transactions and unlocking new possibilities. Join us as we explore how this innovative technology is shaping the financial landscape.</p>
+                  <a href="blog2.html" class="read-more">Read More</a>
+              </div>
+          </div>
+  
+          <!-- Blog Card 3 -->
+          <div class="blog-card">
+              <img src="path/to/your-image3.jpg" alt="Blog 3">
+              <div class="blog-card-content">
+                  <h3 class="blog-title">Blog Title 3</h3>
+                  <p class="blog-description">Short preview of Blog 3. It touches on various topics like...</p>
+                  <a href="blog3.html" class="read-more">Read More</a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+
+
   </body>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
