--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -307,30 +307,32 @@
       <div class="blog-cards">
           <!-- Blog Card 1 -->
           <div class="blog-card">
-              <img  src="{% static 'blog/ai_img.png' %}" alt="Blog 1">
-              <div class="blog-card-content">
-                  <h3 class="blog-title"><i>Revolutionizing the Future with AI</i></h3>
-                  <p class="blog-description">At TechnoWin IT Infra Pvt Ltd, we see Artificial Intelligence as the driving force behind the next wave of innovation. AI is revolutionizing industries, from smart assistants to autonomous systems, transforming how businesses operate. Let us help you explore the endless possibilities AI offers to elevate your business.</p>
-                  <a href="blog1.html" class="read-more">Read More</a>
-              </div>
-          </div>
-  
+            <img src="{% static 'blog/bitcoin_img.png' %}" alt="Blog 2">
+            <div class="blog-card-content">
+                <h3 class="blog-title"><i>Bitcoin: Revolutionized by Blockchain</i></h3>
+                <p class="blog-description">At TechnoWin IT Infra Pvt Ltd, we believe Bitcoin, fueled by blockchain technology, is the future of finance. With its decentralized and secure system, Bitcoin is transforming transactions and unlocking new possibilities. Join us as we explore how this innovative technology is shaping the financial landscape.</p>
+                <a href="blog2.html" class="read-more">Read More</a>
+            </div>
+        </div>
+
           <!-- Blog Card 2 -->
+         
           <div class="blog-card">
-              <img src="{% static 'blog/bitcoin_img.png' %}" alt="Blog 2">
-              <div class="blog-card-content">
-                  <h3 class="blog-title"><i>Bitcoin: Revolutionized by Blockchain</i></h3>
-                  <p class="blog-description">At TechnoWin IT Infra Pvt Ltd, we believe Bitcoin, fueled by blockchain technology, is the future of finance. With its decentralized and secure system, Bitcoin is transforming transactions and unlocking new possibilities. Join us as we explore how this innovative technology is shaping the financial landscape.</p>
-                  <a href="blog2.html" class="read-more">Read More</a>
-              </div>
-          </div>
+            <img  src="{% static 'blog/ai_img.png' %}" alt="Blog 1">
+            <div class="blog-card-content">
+                <h3 class="blog-title"><i>Revolutionizing the Future with AI</i></h3>
+                <p class="blog-description">At TechnoWin IT Infra Pvt Ltd, we see Artificial Intelligence as the driving force behind the next wave of innovation. AI is revolutionizing industries, from smart assistants to autonomous systems, transforming how businesses operate. Let us help you explore the endless possibilities AI offers to elevate your business.</p>
+                <a href="blog1.html" class="read-more">Read More</a>
+            </div>
+        </div>
+
   
           <!-- Blog Card 3 -->
           <div class="blog-card">
-              <img src="path/to/your-image3.jpg" alt="Blog 3">
+              <img src="{% static 'blog/cyber_img.png' %}"  alt="Blog 3">
               <div class="blog-card-content">
-                  <h3 class="blog-title">Blog Title 3</h3>
-                  <p class="blog-description">Short preview of Blog 3. It touches on various topics like...</p>
+                  <h3 class="blog-title"><i>Safeguard Your Digital Assets</i></h3>
+                  <p class="blog-description">At Technowin IT Infra Pvt Ltd, we specialize in cybersecurity solutions to defend your business from growing digital threats. From vulnerability assessments to data encryption, our services ensure your IT infrastructure is secure. Trust us to protect your business and keep your data safe from cyber risks.</p>
                   <a href="blog3.html" class="read-more">Read More</a>
               </div>
           </div>
